# Calculator

./: CMakeLists.txt  calculator.cpp  calculator.h  functions.cpp  functions.h
